Fix figure width containing <code> and <samp>
Previously on narrow displays the figure width would remain too wide.

This still preserves the previous enhancement where multiple <code> and <samp> in the same figure would have the same width when one of them is wider than column width, except when the display is too narrow and they go beyond main width. The shorter blocks would have widths capped at main width.

--- a/gargoyle.css
+++ b/gargoyle.css
@@ -606,6 +606,9 @@ blockquote + cite {
 pre {
 	display: block;
 
+	width: max-content;
+	min-width: 100%;
+
 	margin-top: var(--g-text-margin-top);
 	margin-bottom: var(--g-text-margin-bottom);
 	margin-left: 0;
@@ -625,11 +628,9 @@ pre > code, pre > samp {
 
 figure pre {
 	margin: 0 auto;
-
-	width: 100%;
 }
 figure.g-bound pre {
-	min-width: unset;
+	width: unset;
 
 	word-wrap: break-word;
 	overflow-wrap: break-word;
@@ -1336,7 +1337,7 @@ figure {
 	left: 50%;
 
 	width: max-content;
-	min-width: var(--g-column-width);
+	min-width: 100%;
 	max-width: var(--g-main-width);
 
 	margin-top: var(--g-image-margin-top);
